--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "SMTPConfig": {
+    "SenderAddress": "",
+    "SenderDisplayName": "Hospital central app",
+    "UserName": "",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UseDefaultCredentials": false,
+    "IsBodyHTML": true
   }
 }
