--- a/UI/Properties/launchSettings.json
+++ b/UI/Properties/launchSettings.json
@@ -20,16 +20,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "STRING_CONEXAO_BD": "server=localhost;port=3307;user=root;password=root;database=clinica_medica",
-        "SenderAddress": "",
-        "SenderDisplayName": "",
-        "UserName": "fehfaosl@gmail.com",
-        "Password": "",
-        "IsBodyHTML": "true",
-        "Host": "",
-        "Port": "",
-        "EnableSSL": "false",
-        "UseDefaultCredentials": "false"
+        "STRING_CONEXAO_BD": "server=localhost;port=3306;user=root;database=clinica_medica"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
