--- a/UI/Properties/launchSettings.json
+++ b/UI/Properties/launchSettings.json
@@ -17,6 +17,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "STRING_CONEXAO_BD": "server=localhost;port=3306;user=root;database=clinica_medica"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
