--- a/UI/Properties/launchSettings.json
+++ b/UI/Properties/launchSettings.json
@@ -3,6 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
+      "applicationUrl": "http://localhost:50192/",
+      "sslPort": 44383
     }
   },
   "profiles": {
@@ -17,8 +19,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "STRING_CONEXAO_BD": "server=localhost;port=3306;user=root;database=clinica_medica"
+        "STRING_CONEXAO_BD": "server=localhost;port=3306;user=root;password=1234;database=clinica_medica",
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
